--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CryptoTestActivity"
+            android:label="Crypto Test"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
