--- a/openssl/build.gradle
+++ b/openssl/build.gradle
@@ -7,13 +7,13 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         externalNativeBuild {
             cmake {
                 arguments "-DANDROID_PLATFORM_LEVEL=16"
             }
             ndk {
-                abiFilters "armeabi-v7a", "x86"
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
     }
